tests/neg-custom-args/captures/heal-tparam-cs.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/heal-tparam-cs.scala:10:25 -------------------------------
10 |  val test1 = localCap { c => // error
   |                         ^
   |Found:    (c: Capp^'s1) ->'s2 () ->{c} Unit
   |Required: (c: Capp^) => () ->'s3 Unit
   |
   |Note that capability c cannot be included in outer capture set 's3.
   |
   |where:    => refers to a fresh root capability created in value test1 when checking argument to parameter op of method localCap
   |          ^  refers to the universal root capability
11 |    () => { c.use() }
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/heal-tparam-cs.scala:15:13 -------------------------------
15 |    localCap { c =>  // error
   |    ^
   |    Found:    (x$0: Capp^'s4) ->'s5 () ->{x$0} Unit
   |    Required: (c: Capp^) -> () => Unit
   |
   |    Note that capability x$0 is not included in capture set {cap}.
   |
   |    Note that the existential capture root in () =>² Unit
   |    cannot subsume the capability (x$0 : Capp^'s4) since that capability is not a `Sharable` capability..
   |
   |    where:    =>        refers to a root capability associated with the result type of (c: Capp^): () => Unit
   |              =>² and ^ refer to the universal root capability
   |              cap       is a root capability associated with the result type of (x$0: Capp^'s4): () ->{x$0} Unit
16 |      (c1: Capp^) => () => { c1.use() }
17 |    }
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/heal-tparam-cs.scala:25:13 -------------------------------
25 |    localCap { c =>  // error
   |    ^
   |    Found:    (x$0: Capp^'s6) ->'s7 () ->{x$0} Unit
   |    Required: (c: Capp^{io}) -> () ->{net} Unit
   |
   |    Note that capability x$0 is not included in capture set {net}.
26 |      (c1: Capp^{io}) => () => { c1.use() }
27 |    }
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/heal-tparam-cs.scala:41:10 -------------------------------
41 |    io => () => io.use()  // error
   |          ^^^^^^^^^^^^^^
   |          Found:    () ->{io} Unit
   |          Required: () -> Unit
   |
   |          Note that capability io is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/heal-tparam-cs.scala:44:10 -------------------------------
44 |    io => () => io.use()  // error
   |          ^^^^^^^^^^^^^^
   |          Found:    () ->{io} Unit
   |          Required: () -> Unit
   |
   |          Note that capability io is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
